# colrcv

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
colrcv/: colrcv.c  colrcv.h  models.h
colrcv/models/: hsl.c  hsl.h  hsv.c  hsv.h  lab.c  lab.h  rgb.c  rgb.h  types.h  xyz.c  xyz.h
docs/: annotated.html  classes.html  colrcv_8h.html  colrcv_8h__dep__incl.map  colrcv_8h__dep__incl.md5  colrcv_8h__incl.map  colrcv_8h__incl.md5  colrcv_8h_a0e43c765c0cf8e97e48a0edac140756b_icgraph.map  colrcv_8h_adfc7d979d093165675445bff21d36ed5_icgraph.map  colrcv_8h_aef75c61699a7f00e2da3614698e619ef_icgraph.map  colrcv_8h_source.html  dir_45d1d51c10dcdbb2f46a332e00966717.html  dir_b4cd0b3161836c9d26a4ee7749a167ef.html  dir_b4cd0b3161836c9d26a4ee7749a167ef_dep.map  dir_b4cd0b3161836c9d26a4ee7749a167ef_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  hsl_8h.html  hsl_8h__incl.map  hsl_8h__incl.md5  hsl_8h_a0f412cb5dfb6c69a897207f45cfd1289_cgraph.map  hsl_8h_a0f412cb5dfb6c69a897207f45cfd1289_icgraph.map  hsl_8h_a46ee510639808a294efaca22199bcd4b_cgraph.map  hsl_8h_a57d38eee9f812266c237dab71227d305_cgraph.map  hsl_8h_a57d38eee9f812266c237dab71227d305_icgraph.map  hsl_8h_ac0f591444aa54ccdfdecd1fba6a936c0_cgraph.map  hsl_8h_ac2a3e8e6b91663316869c08a996ee034_cgraph.map  hsl_8h_ae4a2bc4fa1552446357ce92dee7dae36_cgraph.map  hsl_8h_ae6d056e6672db87f30d1ad4b1af845cf_cgraph.map  hsl_8h_ae6d056e6672db87f30d1ad4b1af845cf_icgraph.map  hsl_8h_afae693e3e27a60487aabbebbee047f5d_icgraph.map  hsl_8h_source.html  hsv_8h.html  hsv_8h__incl.map  (+73 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_8.js  variables_9.js  variables_b.js  variables_d.js
tests/: colrcv.c  hsl.c  hsv.c  lab.c  rgb.c  support.h  test.c  xyz.c
unit_test_harness/: harness.c  harness.h
